# message-relay

./: .env.example  .gitignore  Makefile  README.md  REVIEW.md  docker-compose.yml  review_dk.md
.github/workflows/: checks.yml
event-consumer/: Dockerfile  README.md  pyproject.toml
event-consumer/event_consumer/: auth.py  database.py  main.py  models.py  schemas.py  settings.py
event-consumer/tests/: test_authentication.py  test_events.py  test_ready.py
event-propagator/: Dockerfile  pyproject.toml
event-propagator/data/: data.json
event-propagator/event_propagator/: check_event_consumer.py  main.py  propagator.py  settings.py
event-propagator/tests/: test_propagator.py  test_requests.py
message-receiver-api/: Dockerfile  pyproject.toml
message-sender-api/: Dockerfile  README.md  pyproject.toml
message-sender-api/message_sender_api/: main.py
