[tool.poetry]
name = "message-sender-api"
version = "0.1.0"
description = ""
authors = ["PK"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
apscheduler = "^3.10.4"
aiohttp = "^3.9.5"
pydantic = "^2.7.1"
pydantic-settings = "^2.2.1"
pytest = "^8.2.1"
aioresponses = "^0.7.6"
pytest-asyncio = "^0.23.7"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
