[tool.poetry]
name = "message-receiver-api"
version = "0.1.0"
description = ""
authors = ["PK"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"
pydantic = "^2.7.1"
SQLAlchemy = "^2.0.30"
mysql-connector-python = "^8.4.0"
pytest = "^8.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
